--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -10,14 +10,13 @@
                     <md-tooltip>Select All Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section layout="horizontal" layout-align="center center" class="alarms-buttons">
-                    <md-button aria-label="Add as Known" class="md-button-raised md-button-colored">Add as Known</md-button>
-                    <md-button aria-label="Acknowledge" class="md-button-raised md-button-colored">Acknowledge</md-button>
-                    <md-button aria-label="Clear" class="md-button-raised md-button-colored">Clear</md-button>
+                <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                    <md-button ng-click="knowSelectedAlarms()" aria-label="Add as Known" class="md-primary md-raised">Add as Known</md-button>
+                    <md-button ng-click="acknowledgeSelectedAlarms()" aria-label="Acknowledge" class="md-primary md-raised">Acknowledge</md-button>
+                    <md-button ng-click="clearSelectedAlarms()" aria-label="Clear" class="md-primary md-raised">Clear</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="showClearedAlarms" aria-label="Show Cleared Alarms">Show Cleared Alarms</md-checkbox>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="showLargeAlarms" aria-label="Show Detailed Alarm Notifications">Show Detailed Alarm Notifications</md-checkbox>
-                    <input type="search" ng-model="q" placeholder="Search Alarms..."/>
-                    <span flex></span>
+                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="q" label="Search Alarms..."></md-text-float>
                 </section>
             </div>
         </md-toolbar>
@@ -90,11 +89,11 @@
                     <md-tooltip>Select All Known Alarms</md-tooltip>
                 </span>
                 <span flex></span>
-                <section layout="horizontal" layout-align="center center" class="alarms-buttons">
-                    <md-button aria-label="Cancel Known" class="md-button-raised md-button-colored">Cancel Known</md-button>
+                <section md-theme="blue" layout="horizontal" layout-align="center center" class="alarms-buttons">
+                    <md-button ng-click="cancelKnowSelectedAlarms()" aria-label="Cancel Known" class="md-primary md-raised">Cancel Known</md-button>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="showKnownNominalAlarms" aria-label="Show Nominal">Show Nominal</md-checkbox>
                     <md-checkbox class="alarms-tools-checkbox" ng-model="showKnownMaintenanceAlarms" aria-label="Show Maintenance">Show Maintenance</md-checkbox>
-                    <input type="search" ng-model="q2" placeholder="Search Known Alarms..."/>
+                    <md-text-float md-theme="none" style="font-size: 14px; margin-top: -5px;" type="search" ng-model="q2" label="Search Known Alarms..."></md-text-float>
                     <span flex></span>
                 </section>
             </div>
