--- a/app/login-form/login-form.html
+++ b/app/login-form/login-form.html
@@ -8,17 +8,15 @@
 
         </md-toolbar>
 
-        <md-content>
-            <form ng-submit="login(credentials)" layout="vertical" layout-align="center center">
+        <md-content md-theme="blue">
+            <form ng-submit="login(credentials)" layout="vertical" layout-align="center center" layout-padding>
 
-                <!--<md-text-float  label="Username" ng-model="credentials.username"></md-text-float>-->
-                <!--<md-text-float class="long" label="Password" type="password" ng-model="credentials.password"></md-text-float>-->
-                <input style="margin-top: 16px; margin-bottom: 8px; width: 340px" type="text" ng-model="credentials.username" placeholder="Username"/>
-                <input style="margin: 16px;  width: 340px" type="password" ng-model="credentials.password" placeholder="Password"/>
+                <md-text-float class="long-input" flex type="text" ng-model="credentials.username" label="Username"></md-text-float>
+                <md-text-float class="long-input" flex type="password" ng-model="credentials.password" label="Password"></md-text-float>
 
-                <md-button aria-label="Login" type="submit" class="md-button-raised md-button-colored">Login</md-button>
+                <md-button aria-label="Login" type="submit" class="md-raised md-primary">Login</md-button>
 
-                <a style="margin-top: 10px;" href="" ng-click="forgotPassword()">Forgot your password?</a>
+                <a flex href="" ng-click="forgotPassword()">Forgot your password?</a>
             </form>
         </md-content>
 
