commented broken tests, moved receptor state notifications to correct controller

--- a/index.html
+++ b/index.html
@@ -109,28 +109,28 @@
         <md-content class="md-content-padding">
             <md-list>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('landing') }" ng-click="stateGo('landing')">Home</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('landing') }" ng-click="sideNavStateGo('landing')">Home</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('alarms') }" ng-click="stateGo('alarms')">Alarms</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('alarms') }" ng-click="sideNavStateGo('alarms')">Alarms</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('health') }" ng-click="stateGo('health')">Health And State</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('health') }" ng-click="sideNavStateGo('health')">Health And State</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('operatorControl') }" ng-click="stateGo('operatorControl')">Operator Control</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('operatorControl') }" ng-click="sideNavStateGo('operatorControl')">Operator Control</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('scheduler') }" ng-click="stateGo('scheduler')">Scheduler</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('scheduler') }" ng-click="sideNavStateGo('scheduler')">Scheduler</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('sensorGraph') }" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('sensorGraph') }" ng-click="sideNavStateGo('sensorGraph')">Sensor Graphs</button>
                 </md-item>
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('video') }" ng-click="stateGo('video')">Video</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('video') }" ng-click="sideNavStateGo('video')">Video</button>
                 </md-item>
                 <!--<md-item>-->
-                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('weather') }" ng-click="stateGo('weather')">Weather</button>-->
+                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('weather') }" ng-click="sideNavStateGo('weather')">Weather</button>-->
                 <!--</md-item>-->
                 <!--<md-item>-->
                     <!--<button ink-ripple class="menu-item">Log Reports</button>-->
@@ -139,10 +139,10 @@
                     <!--<button ink-ripple class="menu-item">Source Catalogues</button>-->
                 <!--</md-item>-->
                 <!--<md-item>-->
-                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="stateGo('admin')">User Admin</button>-->
+                    <!--<button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('admin') }" ng-click="sideNavStateGo('admin')">User Admin</button>-->
                 <!--</md-item>-->
                 <md-item>
-                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('about') }" ng-click="stateGo('about')">About katGUI</button>
+                    <button ink-ripple class="menu-item" ng-class="{ active: isPageSelected('about') }" ng-click="sideNavStateGo('about')">About katGUI</button>
                 </md-item>
 
             </md-list>
