--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -1,4 +1,4 @@
-<div class="view-container" ng-controller="OperatorControlCtrl">
+<div class="view-container" ng-controller="OperatorControlCtrl" style="min-width: 1000px;">
 
     <div class="md-whiteframe-z1">
         <md-toolbar class="panel-toolbar">
@@ -16,13 +16,13 @@
 
         <md-list class="receptor-state-list">
             <md-item ng-repeat="rec in receptorsData track by $id(rec.name)">
-                <md-item-content class="receptor-state-div" layout="vertical">
-                    <p style="margin-top: 4px;">{{rec.since}}<md-tooltip>Time since last status change</md-tooltip></p>
+                <md-item-content class="receptor-state-div md-whiteframe-z1" layout="vertical">
+                    <p style="">{{rec.since}}<md-tooltip>Time since last status change</md-tooltip></p>
                     <p style="font-size: 26px;"><b>{{rec.name}}</b></p>
-                    <p class="flash-receptor-state receptor-{{rec.state}}"><i>{{rec.state}}</i></p>
-                    <div ng-show="rec.inhibited" class="inhibited">
-                        <span>Inhibited</span>
+                    <div style="min-height: 25px">
+                        <p ng-show="rec.inhibited" class="inhibited">Inhibited</p>
                     </div>
+                    <p class="flash-receptor-state receptor-{{rec.state}}"><i>{{rec.state}}</i></p>
                 </md-item-content>
             </md-item>
         </md-list>
